--- a/ecosystem.config.json
+++ b/ecosystem.config.json
@@ -1,7 +1,7 @@
 {
     "apps": [{
       "name": "presidio-task-api",
-      "script": "index.js",
+      "script": "src/index.js",
       "watch": true,
       "env": {
         "NODE_ENV": "development",
